--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/icons/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="icons/favicon.icon" />
+
+    <!--  -->
+    <link rel="apple-touch-icon" href="public/icons/apple-touch-icon-180x180.png" sizes="180x180" />
+    <link
+      rel="mask-icon"
+      href="public/icons/maskable-icon-512x512.png
+    "
+      color="#FFFFFF"
+    />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wish</title>
   </head>
